# newsfeed

./: .env.example  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: digest.yml
config/: sources.yaml
docs/: index.html
scripts/: bootstrap_env.ps1  register_task.ps1  run_local.ps1
src/newsfeed/: __init__.py  cli.py  config.py  emailer.py  feedback.py  filtering.py  models.py  pipeline.py  report.py  sources.py  storage.py  summarizer.py
